2012-08-15 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/dio.xml: Fixed wrong declariation of 'insert' subcommand in page manual (Bug #53670)
    * rivet/packages/dio/dio_Postgresql.tcl,rivet/packages/dio/dio_Oracle.tcl:: method 
    makeDBFieldValue implemented and tested with package Sessiona (Bug #53703).
    * rivet/packages/session/session-create.sql: file renamed as session-create-postgresql.sql. 
    Schema tested with package Session. 
    * rivet/packages/session/session-class.tcl: removed 'conf' variable that could clash with
    application code (and in at least one case it did) (Fixes bug #53544) 
    
2012-08-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Sqlite.sql,rivet/packages/dio/dio_Mysql.tcl: These connector classes
    didn't compute correctly the number of seconds as unix timestamp to be returned for comparison
    with the same information returned by [clock seconds] (Bug #53703)
    * rivet/packages/session/session-class.tcl: special datetime field were registered associated
    to the rivet_session and rivet_session_cache names, whereas the class has member variables for
    storing these definitions (Bug #53543)

2012-08-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: Database's class fetch method was rewritten on a more simple 
    assumption that methods 'insert' and 'update' know how to actually .... insert and update rows
    * rivet/packages/dio/dio_Sqlite.tcl: The class was found to fail in various circumstances 
    determining the number of rows affected  by a query and determining the set of fields in a 
    table involved by a query. Since a 'select' query is treated in a rather distinctive way 
    from other SQL queries, a new public variable 'select' was added to the properties of the
    class in order to handle consistently the 2 cases within SqliteResult. The number of rows
    affected rows is obtained from the 'changes' subcommand of Sqlite3 connector.